@@ -1,5 +1,11 @@
 2014-08-27  David Malcolm  <dmalcolm@redhat.com>
 
+	* function.c (contains): Introduce local "seq" for PATTERN (insn),
+	with a checked cast, in the region for where we know it's a
+	SEQUENCE.  Use methods of rtx_sequence.
+
+2014-08-27  David Malcolm  <dmalcolm@redhat.com>
+
 	* final.c (get_attr_length_1): Replace GET_CODE check with a
 	dyn_cast, introducing local "seq" and the use of methods of
 	rtx_sequence.
